# fast_api_lesson

./: .env  .gitignore  config.py  main.py  pyproject.toml
auth/: auth.py  auth_handler.py  deps.py
core/: admin.py  base.py  database.py
product/: crud.py  models.py  schemas.py  template_view.py  views.py
templates/apps/product/: list.html  single.html
templates/apps/user/: form.html  list.html  single.html
users/: crud.py  models.py  schemas.py  views.py
utils/: function.py  users.py
